feat: implement bootstrap

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
   }
 
   #area {
-    display: block;
-    margin: auto;
-    border: 1px solid gray;
+    position: absolute;
+    width: 100%;
+    height: 100%;
   }
 </style>
 
-<canvas width=800 height=600 id="area"></canvas>
+<canvas id="area"></canvas>
