feat: add cursor when rotating

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     background-color: black;
   }
 
+  .camera, .camera * {
+    cursor: pointer !important;
+  }
+
   #area {
     position: absolute;
     width: 100%;
