feat: implement the textured bbox

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     background-color: black;
   }
 
+  img {
+    display: none;
+  }
+
   .mouse, .mouse * {
     cursor: pointer !important;
   }
@@ -26,5 +30,6 @@
 </style>
 
 <body>
+  <img id="tiles" src="tiles.jpg" />
   <canvas id="area"></canvas>
 </body>
