feat: improve real-time support

--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
     margin: 0;
     overflow: hidden;
     background-color: black;
+    color: white;
+    font: 11px 'Lucida Grande', sans-serif;
   }
 
-  img {
+  #tiles {
     display: none;
   }
 
@@ -30,6 +32,7 @@
 </style>
 
 <body>
-  <img id="tiles" src="tiles.jpg" />
+  <img id="tiles" src="tiles.jpg">
   <canvas id="area"></canvas>
+  <div id="stats"></div>
 </body>
