wip: improve error logging

--- a/index.html
+++ b/index.html
@@ -33,6 +33,6 @@
 
 <body>
   <img id="tiles" src="tiles.jpg">
-  <canvas id="area"></canvas>
+  <canvas id="area">Sorry, your browser doesn't support canvas.</canvas>
   <div id="stats"></div>
 </body>
